4.0.1 (2018-03-XX)
------------------

Enhancements
 - [web] now possible to show events/task for the current year
 - [web] show current ordering setting in lists
 - [web] updated Angular Material to version 1.1.9

Bug fixes
 - [core] properly update the last-modified attribute (#4313)
 - [core] fixed default data value for c_hascertificate (#4442)
 - [core] fixed ACLs restoration with sogo-tool in single store mode (#4385)
 - [web] prevent deletion of special folders using del key
 - [web] fixed SAML2 session timeout handling during XHR requests
 - [web] fixed renaming a folder under iOS
 - [eas] improved alarms syncing with EAS devices (#4351)
 - [eas] avoid potential cache update when breaking sync queries (#4422)

4.0.0 (2018-03-07)
------------------

New features
 - [core] full S/MIME support
 - [core] can now invite attendees to exceptions only (#2561)
 - [core] add support for module constraints in SQL sources
 - [core] add support for listRequiresDot in SQL sources
 - [web] add support for SearchFieldNames in SQL sources
 - [web] display freebusy information of owner in appointment editor
 - [web] register SOGo as a handler for the mailto scheme (#1223)
 - [web] new events list view where events are grouped by day
 - [web] user setting to always show mail editor inside current window or in popup window
 - [web] add support for events with recurrence dates (RDATE)

Enhancements
 - [web] follow requested URL after user authentication
 - [web] added Simplified Chinese (zh_CN) translation - thanks to Thomas Kuiper
 - [web] now also give modify permission when selecting all calendar rights
 - [web] allow edition of IMAP flags associated to mail labels
 - [web] search scope of address book is now respected
 - [web] avoid redirection to forbidden module (via ModulesConstraints)
 - [web] lower constraints on dates range of auto-reply message (#4161)
 - [web] sort categories in event and task editors (#4349)
 - [web] show weekday in headers of day view