@@ -4,6 +4,7 @@
 Enhancements
  - [web] now possible to show events/task for the current year
  - [web] show current ordering setting in lists
+ - [web] remove invalid occurrences when modifying a recurrent event
  - [web] updated Angular Material to version 1.1.9
 
 Bug fixes
